--- a/BT_CRUD_Express_Mongoose_MongoDB/src/views/users/updateUser.ejs
+++ b/BT_CRUD_Express_Mongoose_MongoDB/src/views/users/updateUser.ejs
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
         <form action="/put-crud" method="post">
-            <input type="text" class="form-control" id="id" name="id" value="<%=data.id%>">
+            <input type="hidden" class="form-control" id="_id" name="id" value="<%= data._id %>">
             <div class="form-row">
                 <div class="form-group col-md-6">
                     <label for="inputEmail4">First Name</label>
